Bug 840474 - Clicking on new mail notifcation opens two MailNews windows when no MailNews window is open, r=Mnyromyr, a=Callek for CLOSED TREE