mailnews/base/src/nsMessengerWinIntegration.h
@@ -64,6 +64,9 @@ public:
 private:
   nsresult AlertFinished();
   nsresult AlertClicked();
+#ifdef MOZ_SUITE
+  nsresult AlertClickedSimple();
+#endif
 
   void InitializeBiffStatusIcon(); 
   void FillToolTipInfo();
